glid alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -43,15 +43,20 @@ body {
   align-items: center;
   justify-content: center;
 }
+.product{
+  height: 100%;
+}
 .single-product {
   padding: 10px;
   transition: 0.6s;
+  border: 5px solid rgb(7, 24, 56);
   
 }
 .single-product:hover {
   box-shadow: 4px 4px 7px rgb(8, 1, 19);
   border-radius: 10px;
-  border: 1px solid rgb(0, 23, 99);
+  border: 5px solid rgb(255, 255, 255);
+  background-color: rgb(3, 57, 83);;
 }
 .product-image {
   width: 150px;
